--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,71 +1,62 @@
 <div id="banner">
-  <div class="container">
-      <div class="row">
-          <div class="col-lg-12 clearfix">
-            <ul class="social-media">
-                <li><a href="https://twitter.com/RBG_Victoria" target="_blank"><span class="icon icon-twitter-solid"></span></a></li>
-                <li><a href="https://www.facebook.com/BotanicGardensVictoria" target="_blank"><span class="icon icon-facebook-solid"></span></a></li>
-                <li><a href="https://instagram.com/royalbotanicgardensvic/" target="_blank"><span class="icon icon-instagram-solid"></span></a></li>
-            </ul>
-          </div> <!-- /.col -->
-
-          <nav class="navbar navbar-default">
-              <div class="navbar-header">
-                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                      <span class="sr-only">Toggle navigation</span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                  </button>
-                  <div class="navbar-brand">
-                      <a class="brand-rbg" href="http://www.rbg.vic.gov.au"><img src="https://vicflora.rbg.vic.gov.au/images/rbg-logo-with-text.png" alt=""/></a>
-                      <a class="brand-vicflora" href="https://vicflora.rbg.vic.gov.au/">VicFlora</a>
-                  </div>
-              </div>
-
-              <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li class="home-link"><a href="https://vicflora.rbg.vic.gov.au/"><i class="fa fa-home fa-lg" aria-hidden="true"></i></a></li>
-                  <li><a href="https://vicflora.rbg.vic.gov.au/flora/search">Search</a></li>
-                  <li><a href="https://vicflora.rbg.vic.gov.au/flora/classification">Browse classification</a></li>
-                  <li><a href="https://vicflora.rbg.vic.gov.au/flora/key/1903" class="colorbox_mainkey">Keys</a></li>
-                  <li><a href="https://vicflora.rbg.vic.gov.au/flora/checklist">Checklists</a></li>
-                  <li><a href="https://vicflora.rbg.vic.gov.au/flora/glossary">Glossary</a></li>
-                  <li><a href="{{ '/bioregions' | absolute_url }}">Bioregions & Vegetation</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Help <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                      <li><a href="{{ '/help' | absolute_url }}">Help</a></li>
-                      <li><a href="{{ '/about' | absolute_url }}">About</a></li>
-                      <li><a href="{{ '/acknowledgements' | absolute_url }}">Acknowledgements</a></li>
-                    </ul>
-                  </li>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 clearfix">
+                <ul class="social-media">
+                    <li><a href="https://twitter.com/RBG_Victoria" target="_blank"><span class="icon icon-twitter-solid"></span></a></li>
+                    <li><a href="https://www.facebook.com/BotanicGardensVictoria" target="_blank"><span class="icon icon-facebook-solid"></span></a></li>
+                    <li><a href="https://instagram.com/royalbotanicgardensvic/" target="_blank"><span class="icon icon-instagram-solid"></span></a></li>
                 </ul>
-                <form action="https://vicflora.rbg.vic.gov.au/flora/search" accept-charset="utf-8" method="get" class="navbar-form navbar-right">                    <div class="form-group">
-                      <div class="input-group">
-                    <input type="text" name="q" value="" class="form-control input-sm" placeholder="Enter taxon name..."  />                            <div class="submit input-group-addon"><i class="fa fa-search fa-lg"></i></div>
-                      </div>
-                  </div>
+            </div> <!-- /.col -->
 
-                </form>                </div><!--/.navbar-collapse -->
-          </nav>
+            <nav class="navbar navbar-default">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <div class="navbar-brand">
+                        <a class="brand-rbg" href="http://www.rbg.vic.gov.au"><img src="https://vicflora.rbg.vic.gov.au/images/rbg-logo-with-text.png" alt=""/></a>
+                        <a class="brand-vicflora" href="https://hortflora.rbg.vic.gov.au/">HortFlora</a>
+                    </div>
+                </div>
 
-          <div class="col-lg-12">
-              <!-- Place for alert -->
-              <div id="header">
-                  <div class="login">
-                                                  <a href="https://vicflora.rbg.vic.gov.au/admin/login" id="hidden-login-link">Log in</a>                                            </div>
-                  <div id="logo">
-                      <a href='http://www.rbg.vic.gov.au'>
-                          <img class="img-responsive" src="https://vicflora.rbg.vic.gov.au/images/rbg-logo-with-text" alt="" />
-                      </a>
-                  </div>
-                  <div id="site-name">
-                      <a href="https://vicflora.rbg.vic.gov.au/">VicFlora</a>
-                  </div>
-                  <div id="subtitle">Flora of Victoria</div>
-              </div>
-          </div>
-      </div><!--/.row -->
-  </div><!--/.container -->
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="home-link"><a href="https://hortflora.rbg.vic.gov.au"><i class="fa fa-lg fa-home"></i></a></li>
+                        <li><a href="https://hortflora.rbg.vic.gov.au/search">Search</a></li>
+                        <li><a href="https://hortflora.rbg.vic.gov.au/browse">Browse classification</a></li>
+                        <li><a href="#">Glossary</a></li>
+                    </ul>
+                    <form action="https://hortflora.rbg.vic.gov.au/search" accept-charset="utf-8" method="get" class="navbar-form navbar-right">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <input type="text" name="q" value="" class="form-control input-sm" placeholder="Enter taxon name..."  />
+                                <div class="submit input-group-addon"><i class="fa fa-search fa-lg"></i></div>
+                            </div>
+                        </div>
+                    </form>
+                </div><!--/.navbar-collapse -->
+            </nav>
+
+            <div class="col-lg-12">
+                <div id="header">
+                    <div class="login">
+                        <a href="https://hortflora.rbg.vic.gov.au/login" id="hidden-login-link">Log in</a>
+                    </div>
+                    <div id="logo">
+                        <a href='http://www.rbg.vic.gov.au'>
+                            <img class="img-responsive" src="https://vicflora.rbg.vic.gov.au/images/rbg-logo-with-text" alt="" />
+                        </a>
+                    </div>
+                    <div id="site-name">
+                        <a href="https://hortflora.rbg.vic.gov.au">HortFlora</a>
+                    </div>
+                    <div id="subtitle">Horticultural Flora of South-eastern Australia</div>
+                </div>
+            </div>
+        </div><!--/.row -->
+    </div><!--/.container -->
 </div> <!-- /#banner -->
