--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,14 @@
                         <li><a href="https://hortflora.rbg.vic.gov.au/search">Search</a></li>
                         <li><a href="https://hortflora.rbg.vic.gov.au/browse">Browse classification</a></li>
                         <li><a href="#">Glossary</a></li>
+                        <li class="dropdown">
+                          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Help <span class="caret"></span></a>
+                          <ul class="dropdown-menu" role="menu">
+                            <li><a href="https://hortflora.rbg.vic.gov.au/static/help">Help</a></li>
+                            <li><a href="https://hortflora.rbg.vic.gov.au/static/about">About</a></li>
+                            <li><a href="https://hortflora.rbg.vic.gov.au/static/acknowledgements">Acknowledgements</a></li>
+                          </ul>
+                        </li>
                     </ul>
                     <form action="https://hortflora.rbg.vic.gov.au/search" accept-charset="utf-8" method="get" class="navbar-form navbar-right">
                         <div class="form-group">
