--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
                         <li class="home-link"><a href="https://hortflora.rbg.vic.gov.au"><i class="fa fa-lg fa-home"></i></a></li>
                         <li><a href="https://hortflora.rbg.vic.gov.au/search">Search</a></li>
                         <li><a href="https://hortflora.rbg.vic.gov.au/browse">Browse classification</a></li>
-                        <li><a href="#">Glossary</a></li>
+                        <li><a href="https://hortflora.rbg.vic.gov.au/glossary">Glossary</a></li>
                         <li class="dropdown">
                           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Help <span class="caret"></span></a>
                           <ul class="dropdown-menu" role="menu">
